--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "cheerio": "^1.0.0",
