--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
+    "pdfjs-dist": "^4.5.136",
     "pinecone": "^0.1.0",
     "react": "^18",
     "react-dom": "^18",
