Changes to be committed: 	new file:   .env 	modified:   README.md 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/api/chat/route.js 	modified:   src/app/page.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rmp-ai-assistant",
+  "name": "rmp-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.17.1",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@pinecone-database/pinecone": "^3.0.1",
@@ -22,8 +23,9 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cohere-ai": "^7.12.1",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "openai": "^4.56.0",
     "pinecone": "^0.1.0",
     "react": "^18",
